--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,13 +1,14 @@
-button {
+.style1,
+.style2 {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman",  sans-serif;
 }
 
-.button1 {
+.style1 {
     color: white;
     background-color: black;
 }
 
-.button2 {
+.style2 {
     background-color: yellow;
 }
